# Python project metadata, including dependencies & tool settings               
# https://snarky.ca/what-the-heck-is-pyproject-toml

[project]
name = "ok_arduino_little_layout_tests"
version = "0.1"
requires-python = ">=3.12"

dependencies = [
  "ok-logging-setup>=0.9",
  "ok-subprocess-defaults>=0.1",
  "pillow>=12.0.0",
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
norecursedirs = ["*.tmp"]
log_date_format = "%H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_level = "WARNING"
